--- a/test.ipynb
+++ b/test.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "file_name = \"mESC\"\n",
-    "adata = sc.read(\"/home/zfd297/benchmark/dataset/\" +file_name + \".h5ad\")\n",
+    "adata = sc.read(\"./\" +file_name + \".h5ad\")\n",
     "\n",
     "filtered_refnet = adata.uns[\"grn\"]\n",
     "fea_df = pd.DataFrame(adata.uns[\"gpt_emb\"])\n",
